Kubernetes Security Best Practices Whitepaper 2023/Network Isolation/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    role: ingress

---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    role: frontend

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    role: backend
