Kubernetes Security Best Practices Whitepaper 2023/Network Isolation/mysql-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: backend
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: backend
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: backend
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: backend
    spec:
      containers:
        - image: mysql:8-debian
          name: mysql
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
          livenessProbe:
            tcpSocket:
              port: 3306
          ports:
            - containerPort: 3306
              name: mysql
