Kubernetes Security Best Practices Whitepaper 2023/Network Isolation/wordpress-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: frontend
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: frontend
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
